package hostabi

import (
	"context"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/weisyn/v1/internal/core/ispc/testutil"
	ispcInterfaces "github.com/weisyn/v1/internal/core/ispc/interfaces"
	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	pbresource "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
	"github.com/weisyn/v1/pkg/types"
)

// ============================================================================
// ports_outputs_asset.go æµ‹è¯•
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šå‘ç° AppendAssetOutput, Transfer, TransferEx çš„ç¼ºé™·å’ŒBUG
//
// ============================================================================

// TestAppendAssetOutput_NativeCoin æµ‹è¯•è¿½åŠ åŸç”Ÿå¸è¾“å‡º
func TestAppendAssetOutput_NativeCoin(t *testing.T) {
	hostABI := createTestHostRuntimePortsForPorts(t)
	ctx := context.Background()
	recipient := make([]byte, 20)
	amount := uint64(1000)

	idx, err := hostABI.AppendAssetOutput(ctx, recipient, amount, nil, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè¿½åŠ åŸç”Ÿå¸è¾“å‡º")
	assert.Equal(t, uint32(0), idx, "åº”è¯¥è¿”å›è¾“å‡ºç´¢å¼•")
}

// TestAppendAssetOutput_ContractToken æµ‹è¯•è¿½åŠ åˆçº¦ä»£å¸è¾“å‡º
func TestAppendAssetOutput_ContractToken(t *testing.T) {
	hostABI := createTestHostRuntimePortsForPorts(t)
	ctx := context.Background()
	recipient := make([]byte, 20)
	amount := uint64(1000)
	tokenID := make([]byte, 20)

	idx, err := hostABI.AppendAssetOutput(ctx, recipient, amount, tokenID, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè¿½åŠ åˆçº¦ä»£å¸è¾“å‡º")
	assert.Equal(t, uint32(0), idx, "åº”è¯¥è¿”å›è¾“å‡ºç´¢å¼•")
}

// TestAppendAssetOutput_WithLockingConditions æµ‹è¯•å¸¦é”å®šæ¡ä»¶çš„è¾“å‡º
func TestAppendAssetOutput_WithLockingConditions(t *testing.T) {
	hostABI := createTestHostRuntimePortsForPorts(t)
	ctx := context.Background()
	recipient := make([]byte, 20)
	amount := uint64(1000)
	lockingConditions := []*pb.LockingCondition{
		{
			Condition: &pb.LockingCondition_SingleKeyLock{
				SingleKeyLock: &pb.SingleKeyLock{
					KeyRequirement: &pb.SingleKeyLock_RequiredAddressHash{
						RequiredAddressHash: make([]byte, 20),
					},
				},
			},
		},
	}

	idx, err := hostABI.AppendAssetOutput(ctx, recipient, amount, nil, lockingConditions)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè¿½åŠ å¸¦é”å®šæ¡ä»¶çš„è¾“å‡º")
	assert.Equal(t, uint32(0), idx, "åº”è¯¥è¿”å›è¾“å‡ºç´¢å¼•")
}

// TestAppendAssetOutput_EmptyDraftID æµ‹è¯•ç©ºè‰ç¨¿ID
func TestAppendAssetOutput_EmptyDraftID(t *testing.T) {
	mockExecCtx := &mockExecutionContextForPorts{
		draftID: "", // ç©ºè‰ç¨¿ID
	}
	mockDraftService := &mockDraftServiceForPorts{}
	hostABI := createHostRuntimePortsWithMocks(t, mockExecCtx, mockDraftService)
	ctx := context.Background()
	recipient := make([]byte, 20)
	amount := uint64(1000)

	idx, err := hostABI.AppendAssetOutput(ctx, recipient, amount, nil, nil)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Equal(t, uint32(0), idx, "ç´¢å¼•åº”è¯¥ä¸º0")
	assert.Contains(t, err.Error(), "è·å–è‰ç¨¿IDå¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestAppendAssetOutput_LoadDraftFailed æµ‹è¯•åŠ è½½è‰ç¨¿å¤±è´¥
func TestAppendAssetOutput_LoadDraftFailed(t *testing.T) {
	mockExecCtx := &mockExecutionContextForPorts{
		draftID: "draft-123",
	}
	mockDraftService := &mockDraftServiceForPorts{
		loadDraftError: assert.AnError, // åŠ è½½è‰ç¨¿å¤±è´¥
	}
	hostABI := createHostRuntimePortsWithMocks(t, mockExecCtx, mockDraftService)
	ctx := context.Background()
	recipient := make([]byte, 20)
	amount := uint64(1000)

	idx, err := hostABI.AppendAssetOutput(ctx, recipient, amount, nil, nil)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Equal(t, uint32(0), idx, "ç´¢å¼•åº”è¯¥ä¸º0")
	assert.Contains(t, err.Error(), "åŠ è½½äº¤æ˜“è‰ç¨¿å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestAppendAssetOutput_AddAssetOutputFailed æµ‹è¯•æ·»åŠ èµ„äº§è¾“å‡ºå¤±è´¥
func TestAppendAssetOutput_AddAssetOutputFailed(t *testing.T) {
	mockExecCtx := &mockExecutionContextForPorts{
		draftID: "draft-123",
	}
	mockDraftService := &mockDraftServiceForPorts{
		addAssetOutputError: assert.AnError, // æ·»åŠ è¾“å‡ºå¤±è´¥
	}
	hostABI := createHostRuntimePortsWithMocks(t, mockExecCtx, mockDraftService)
	ctx := context.Background()
	recipient := make([]byte, 20)
	amount := uint64(1000)

	idx, err := hostABI.AppendAssetOutput(ctx, recipient, amount, nil, nil)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Equal(t, uint32(0), idx, "ç´¢å¼•åº”è¯¥ä¸º0")
	assert.Contains(t, err.Error(), "è¿½åŠ èµ„äº§è¾“å‡ºå¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestAppendAssetOutput_ContractToken_NilContractAddress æµ‹è¯•åˆçº¦ä»£å¸ä½†åˆçº¦åœ°å€ä¸ºnil
func TestAppendAssetOutput_ContractToken_NilContractAddress(t *testing.T) {
	mockExecCtx := &mockExecutionContextForPorts{
		draftID:         "draft-123",
		contractAddress: nil, // åˆçº¦åœ°å€ä¸ºnil
	}
	mockDraftService := &mockDraftServiceForPorts{
		draft: &types.DraftTx{
			DraftID: "draft-123",
			Tx: &pb.Transaction{
				Outputs: []*pb.TxOutput{
					{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_ContractToken{
									ContractToken: &pb.ContractTokenAsset{},
								},
							},
						},
					},
				},
			},
		},
	}
	hostABI := createHostRuntimePortsWithMocks(t, mockExecCtx, mockDraftService)
	ctx := context.Background()
	recipient := make([]byte, 20)
	amount := uint64(1000)
	tokenID := make([]byte, 20)

	idx, err := hostABI.AppendAssetOutput(ctx, recipient, amount, tokenID, nil)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Equal(t, uint32(0), idx, "ç´¢å¼•åº”è¯¥ä¸º0")
	assert.Contains(t, err.Error(), "æ— æ³•è·å–åˆçº¦åœ°å€", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestAppendAssetOutput_ContractToken_SaveDraftFailed æµ‹è¯•åˆçº¦ä»£å¸ä¿å­˜è‰ç¨¿å¤±è´¥
func TestAppendAssetOutput_ContractToken_SaveDraftFailed(t *testing.T) {
	mockExecCtx := &mockExecutionContextForPorts{
		draftID:         "draft-123",
		contractAddress: make([]byte, 20),
	}
	mockDraftService := &mockDraftServiceForPorts{
		draft: &types.DraftTx{
			DraftID: "draft-123",
			Tx: &pb.Transaction{
				Outputs: []*pb.TxOutput{
					{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_ContractToken{
									ContractToken: &pb.ContractTokenAsset{},
								},
							},
						},
					},
				},
			},
		},
		saveDraftError: assert.AnError, // ä¿å­˜è‰ç¨¿å¤±è´¥
	}
	hostABI := createHostRuntimePortsWithMocks(t, mockExecCtx, mockDraftService)
	ctx := context.Background()
	recipient := make([]byte, 20)
	amount := uint64(1000)
	tokenID := make([]byte, 20)

	idx, err := hostABI.AppendAssetOutput(ctx, recipient, amount, tokenID, nil)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Equal(t, uint32(0), idx, "ç´¢å¼•åº”è¯¥ä¸º0")
	assert.Contains(t, err.Error(), "ä¿å­˜äº¤æ˜“è‰ç¨¿å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestTransfer_Success æµ‹è¯•åŸºç¡€è½¬è´¦æˆåŠŸ
func TestTransfer_Success(t *testing.T) {
	hostABI := createTestHostRuntimePortsForPorts(t)
	ctx := context.Background()
	from := make([]byte, 20)
	to := make([]byte, 20)
	amount := uint64(1000)

	err := hostABI.Transfer(ctx, from, to, amount, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè½¬è´¦")
}

// TestTransfer_WithTokenID æµ‹è¯•ä»£å¸è½¬è´¦
func TestTransfer_WithTokenID(t *testing.T) {
	hostABI := createTestHostRuntimePortsForPorts(t)
	ctx := context.Background()
	from := make([]byte, 20)
	to := make([]byte, 20)
	amount := uint64(1000)
	tokenID := make([]byte, 20)

	err := hostABI.Transfer(ctx, from, to, amount, tokenID)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè½¬è´¦ä»£å¸")
}

// TestTransfer_AppendAssetOutputFailed æµ‹è¯•è½¬è´¦æ—¶è¿½åŠ è¾“å‡ºå¤±è´¥
func TestTransfer_AppendAssetOutputFailed(t *testing.T) {
	mockExecCtx := &mockExecutionContextForPorts{
		draftID: "", // ç©ºè‰ç¨¿IDå¯¼è‡´å¤±è´¥
	}
	mockDraftService := &mockDraftServiceForPorts{}
	hostABI := createHostRuntimePortsWithMocks(t, mockExecCtx, mockDraftService)
	ctx := context.Background()
	from := make([]byte, 20)
	to := make([]byte, 20)
	amount := uint64(1000)

	err := hostABI.Transfer(ctx, from, to, amount, nil)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "åˆ›å»ºè½¬è´¦è¾“å‡ºå¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestTransferEx_Success æµ‹è¯•æ‰©å±•è½¬è´¦æˆåŠŸ
func TestTransferEx_Success(t *testing.T) {
	hostABI := createTestHostRuntimePortsForPorts(t)
	ctx := context.Background()
	from := make([]byte, 20)
	to := make([]byte, 20)
	amount := uint64(1000)
	lockingConditions := []*pb.LockingCondition{
		{
			Condition: &pb.LockingCondition_SingleKeyLock{
				SingleKeyLock: &pb.SingleKeyLock{
					KeyRequirement: &pb.SingleKeyLock_RequiredAddressHash{
						RequiredAddressHash: make([]byte, 20),
					},
				},
			},
		},
	}

	err := hostABI.TransferEx(ctx, from, to, amount, nil, lockingConditions)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ‰§è¡Œæ‰©å±•è½¬è´¦")
}

// TestTransferEx_WithLockingConditions æµ‹è¯•å¸¦é”å®šæ¡ä»¶çš„æ‰©å±•è½¬è´¦
func TestTransferEx_WithLockingConditions(t *testing.T) {
	hostABI := createTestHostRuntimePortsForPorts(t)
	ctx := context.Background()
	from := make([]byte, 20)
	to := make([]byte, 20)
	amount := uint64(1000)
	lockingConditions := []*pb.LockingCondition{
		{
			Condition: &pb.LockingCondition_SingleKeyLock{
				SingleKeyLock: &pb.SingleKeyLock{
					KeyRequirement: &pb.SingleKeyLock_RequiredAddressHash{
						RequiredAddressHash: make([]byte, 20),
					},
				},
			},
		},
	}

	err := hostABI.TransferEx(ctx, from, to, amount, nil, lockingConditions)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ‰§è¡Œå¸¦é«˜åº¦é”çš„è½¬è´¦")
}

// TestTransferEx_AppendAssetOutputFailed æµ‹è¯•æ‰©å±•è½¬è´¦æ—¶è¿½åŠ è¾“å‡ºå¤±è´¥
func TestTransferEx_AppendAssetOutputFailed(t *testing.T) {
	mockExecCtx := &mockExecutionContextForPorts{
		draftID: "", // ç©ºè‰ç¨¿IDå¯¼è‡´å¤±è´¥
	}
	mockDraftService := &mockDraftServiceForPorts{}
	hostABI := createHostRuntimePortsWithMocks(t, mockExecCtx, mockDraftService)
	ctx := context.Background()
	from := make([]byte, 20)
	to := make([]byte, 20)
	amount := uint64(1000)
	lockingConditions := []*pb.LockingCondition{}

	err := hostABI.TransferEx(ctx, from, to, amount, nil, lockingConditions)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "åˆ›å»ºè½¬è´¦è¾“å‡ºå¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// ============================================================================
// è¾…åŠ©å‡½æ•°
// ============================================================================

// createTestHostRuntimePortsForPorts åˆ›å»ºç”¨äºæµ‹è¯•portsçš„HostRuntimePorts
func createTestHostRuntimePortsForPorts(t *testing.T) *HostRuntimePorts {
	t.Helper()

	mockExecCtx := &mockExecutionContextForPorts{
		draftID:         "draft-123",
		contractAddress: make([]byte, 20),
	}
	mockDraftService := &mockDraftServiceForPorts{
		draft: &types.DraftTx{
			DraftID: "draft-123",
			Tx:      &pb.Transaction{},
		},
	}

	return createHostRuntimePortsWithMocks(t, mockExecCtx, mockDraftService)
}

// createHostRuntimePortsWithMocks ä½¿ç”¨æŒ‡å®šçš„mockå¯¹è±¡åˆ›å»ºHostRuntimePorts
func createHostRuntimePortsWithMocks(t *testing.T, mockExecCtx *mockExecutionContextForPorts, mockDraftService *mockDraftServiceForPorts) *HostRuntimePorts {
	t.Helper()

	logger := testutil.NewTestLogger()
	mockChainQuery := &mockChainQueryForHostABI{}
	mockUTXOQuery := &mockUTXOQueryForHostABI{}
	mockCASStorage := &mockCASStorageForHostABI{}
	mockTxQuery := &mockTxQueryForHostABI{}
	mockResourceQuery := &mockResourceQueryForHostABI{}
	mockHashManager := testutil.NewTestHashManager()

	hostABI, err := NewHostRuntimePorts(
		logger,
		mockChainQuery,
		&mockBlockQueryForHostABI{},
		mockUTXOQuery,
		mockCASStorage,
		mockTxQuery,
		mockResourceQuery,
		mockDraftService,
		mockHashManager,
		mockExecCtx,
	)
	require.NoError(t, err, "åº”è¯¥æˆåŠŸåˆ›å»ºHostRuntimePorts")

	return hostABI.(*HostRuntimePorts)
}

// mockExecutionContextForPorts Mockçš„ExecutionContextï¼ˆç”¨äºportsæµ‹è¯•ï¼‰
type mockExecutionContextForPorts struct {
	draftID                    string
	contractAddress            []byte
	transactionDraft           *ispcInterfaces.TransactionDraft
	getTransactionDraftError   error
	updateTransactionDraftError error
}

func (m *mockExecutionContextForPorts) GetDraftID() string { return m.draftID }
func (m *mockExecutionContextForPorts) GetContractAddress() []byte { return m.contractAddress }
func (m *mockExecutionContextForPorts) GetExecutionID() string { return "exec-123" }
func (m *mockExecutionContextForPorts) GetCallerAddress() []byte { return make([]byte, 20) }
func (m *mockExecutionContextForPorts) GetBlockHeight() uint64 { return 100 }
func (m *mockExecutionContextForPorts) GetBlockTimestamp() uint64 { return 1234567890 }
func (m *mockExecutionContextForPorts) GetChainID() []byte { return []byte("test-chain") }
func (m *mockExecutionContextForPorts) GetTransactionID() []byte { return make([]byte, 32) }
func (m *mockExecutionContextForPorts) HostABI() ispcInterfaces.HostABI { return nil }
func (m *mockExecutionContextForPorts) SetHostABI(hostABI ispcInterfaces.HostABI) error { return nil }
func (m *mockExecutionContextForPorts) GetTransactionDraft() (*ispcInterfaces.TransactionDraft, error) {
	if m.getTransactionDraftError != nil {
		return nil, m.getTransactionDraftError
	}
	if m.transactionDraft == nil {
		return &ispcInterfaces.TransactionDraft{
			Tx: &pb.Transaction{},
		}, nil
	}
	return m.transactionDraft, nil
}
func (m *mockExecutionContextForPorts) UpdateTransactionDraft(draft *ispcInterfaces.TransactionDraft) error {
	if m.updateTransactionDraftError != nil {
		return m.updateTransactionDraftError
	}
	m.transactionDraft = draft
	return nil
}
func (m *mockExecutionContextForPorts) RecordHostFunctionCall(call *ispcInterfaces.HostFunctionCall) {}
func (m *mockExecutionContextForPorts) GetExecutionTrace() ([]*ispcInterfaces.HostFunctionCall, error) { return nil, nil }
func (m *mockExecutionContextForPorts) RecordStateChange(key string, oldValue interface{}, newValue interface{}) error { return nil }
func (m *mockExecutionContextForPorts) RecordTraceRecords(records []ispcInterfaces.TraceRecord) error { return nil }
func (m *mockExecutionContextForPorts) GetResourceUsage() *types.ResourceUsage { return &types.ResourceUsage{} }
func (m *mockExecutionContextForPorts) FinalizeResourceUsage() {}
func (m *mockExecutionContextForPorts) SetReturnData(data []byte) error { return nil }
func (m *mockExecutionContextForPorts) GetReturnData() ([]byte, error) { return nil, nil }
func (m *mockExecutionContextForPorts) AddEvent(event *ispcInterfaces.Event) error { return nil }
func (m *mockExecutionContextForPorts) GetEvents() ([]*ispcInterfaces.Event, error) { return nil, nil }
func (m *mockExecutionContextForPorts) SetInitParams(params []byte) error { return nil }
func (m *mockExecutionContextForPorts) GetInitParams() ([]byte, error) { return nil, nil }

// mockDraftServiceForPorts Mockçš„TransactionDraftServiceï¼ˆç”¨äºportsæµ‹è¯•ï¼‰
type mockDraftServiceForPorts struct {
	draft                  *types.DraftTx
	loadDraftError         error
	addAssetOutputError    error
	addResourceOutputError error
	addStateOutputError    error
	saveDraftError         error
	addAssetOutputIndex    uint32
}

func (m *mockDraftServiceForPorts) CreateDraft(ctx context.Context) (*types.DraftTx, error) {
	return m.draft, nil
}

func (m *mockDraftServiceForPorts) LoadDraft(ctx context.Context, draftID string) (*types.DraftTx, error) {
	if m.loadDraftError != nil {
		return nil, m.loadDraftError
	}
	if m.draft == nil {
		return &types.DraftTx{
			DraftID: draftID,
			Tx:      &pb.Transaction{},
		}, nil
	}
	return m.draft, nil
}

func (m *mockDraftServiceForPorts) SaveDraft(ctx context.Context, draft *types.DraftTx) error {
	if m.saveDraftError != nil {
		return m.saveDraftError
	}
	m.draft = draft
	return nil
}

func (m *mockDraftServiceForPorts) GetDraftByID(ctx context.Context, draftID string) (*types.DraftTx, error) {
	return m.draft, nil
}

func (m *mockDraftServiceForPorts) ValidateDraft(ctx context.Context, draft *types.DraftTx) error {
	return nil
}

func (m *mockDraftServiceForPorts) SealDraft(ctx context.Context, draft *types.DraftTx) (*types.ComposedTx, error) {
	return nil, nil
}

func (m *mockDraftServiceForPorts) DeleteDraft(ctx context.Context, draftID string) error {
	return nil
}

func (m *mockDraftServiceForPorts) AddInput(ctx context.Context, draft *types.DraftTx, outpoint *pb.OutPoint, isReferenceOnly bool, unlockingProof *pb.UnlockingProof) (uint32, error) {
	return 0, nil
}

func (m *mockDraftServiceForPorts) AddAssetOutput(ctx context.Context, draft *types.DraftTx, owner []byte, amount string, tokenID []byte, lockingConditions []*pb.LockingCondition) (uint32, error) {
	if m.addAssetOutputError != nil {
		return 0, m.addAssetOutputError
	}
	if draft.Tx == nil {
		draft.Tx = &pb.Transaction{}
	}
	draft.Tx.Outputs = append(draft.Tx.Outputs, &pb.TxOutput{
		Owner: owner,
		OutputContent: &pb.TxOutput_Asset{
			Asset: func() *pb.AssetOutput {
				if tokenID == nil {
					return &pb.AssetOutput{
						AssetContent: &pb.AssetOutput_NativeCoin{
							NativeCoin: &pb.NativeCoinAsset{
								Amount: amount,
							},
						},
					}
				}
				return &pb.AssetOutput{
					AssetContent: &pb.AssetOutput_ContractToken{
						ContractToken: &pb.ContractTokenAsset{
							Amount: amount,
						},
					},
				}
			}(),
		},
	})
	idx := uint32(len(draft.Tx.Outputs) - 1)
	m.addAssetOutputIndex = idx
	return idx, nil
}

func (m *mockDraftServiceForPorts) AddResourceOutput(ctx context.Context, draft *types.DraftTx, contentHash []byte, category string, owner []byte, lockingConditions []*pb.LockingCondition, metadata []byte) (uint32, error) {
	if m.addResourceOutputError != nil {
		return 0, m.addResourceOutputError
	}
	if draft.Tx == nil {
		draft.Tx = &pb.Transaction{}
	}
	draft.Tx.Outputs = append(draft.Tx.Outputs, &pb.TxOutput{
		Owner: owner,
		OutputContent: &pb.TxOutput_Resource{
			Resource: &pb.ResourceOutput{
				Resource: &pbresource.Resource{
					ContentHash: contentHash,
					Category:    pbresource.ResourceCategory_RESOURCE_CATEGORY_EXECUTABLE,
				},
			},
		},
	})
	return uint32(len(draft.Tx.Outputs) - 1), nil
}

func (m *mockDraftServiceForPorts) AddStateOutput(ctx context.Context, draft *types.DraftTx, stateID []byte, stateVersion uint64, executionResultHash []byte, publicInputs []byte, parentStateHash []byte) (uint32, error) {
	if m.addStateOutputError != nil {
		return 0, m.addStateOutputError
	}
	if draft.Tx == nil {
		draft.Tx = &pb.Transaction{}
	}
	draft.Tx.Outputs = append(draft.Tx.Outputs, &pb.TxOutput{
		OutputContent: &pb.TxOutput_State{
			State: &pb.StateOutput{
				StateId:             stateID,
				StateVersion:        stateVersion,
				ExecutionResultHash: executionResultHash,
			},
		},
	})
	return uint32(len(draft.Tx.Outputs) - 1), nil
}

