package draft

import (
	"context"
	"errors"
	"fmt"
	"sync"
	"time"

	"github.com/google/uuid"
	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	pbresource "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
	metricsiface "github.com/weisyn/v1/pkg/interfaces/infrastructure/metrics"
	"github.com/weisyn/v1/pkg/interfaces/tx"
	"github.com/weisyn/v1/pkg/types"
)

// ============================================================================
// Draft çŠ¶æ€æœºå®šä¹‰
// ============================================================================

// DraftState Draft çŠ¶æ€æšä¸¾
//
// ğŸ¯ **çŠ¶æ€æœº**ï¼š
//
//	Drafting â†’ Sealed â†’ Committed
//
// ğŸ“‹ **çŠ¶æ€è¯´æ˜**ï¼š
//   - Drafting: è‰ç¨¿ä¸­ï¼Œå¯ä»¥ä¿®æ”¹ï¼ˆæ·»åŠ  input/outputï¼‰
//   - Sealed: å·²å°é—­ï¼Œä¸å¯ä¿®æ”¹ï¼Œå·²è½¬æ¢ä¸º ComposedTx
//   - Committed: å·²æäº¤ï¼ŒDraft å·²è½¬æ¢ä¸ºäº¤æ˜“å¹¶æäº¤åˆ°äº¤æ˜“æ± 
//
// âš ï¸ **æ³¨æ„**ï¼š
//   - Draft ä¸æ˜¯æ­£å¼ Type-state çš„ä¸€éƒ¨åˆ†
//   - Draft.Seal() åè½¬æ¢ä¸º ComposedTxï¼Œè¿›å…¥æ­£å¼çŠ¶æ€æœº
//   - Committed çŠ¶æ€è¡¨ç¤º Draft å·²å®Œæˆä½¿å‘½ï¼Œå¯ä»¥æ¸…ç†
type DraftState int32

const (
	// DraftStateDrafting è‰ç¨¿ä¸­ï¼ˆå¯ä¿®æ”¹ï¼‰
	DraftStateDrafting DraftState = iota
	// DraftStateSealed å·²å°é—­ï¼ˆä¸å¯ä¿®æ”¹ï¼Œå·²è½¬æ¢ä¸º ComposedTxï¼‰
	DraftStateSealed
	// DraftStateCommitted å·²æäº¤ï¼ˆDraft å·²å®Œæˆä½¿å‘½ï¼‰
	DraftStateCommitted
)

// String è¿”å›çŠ¶æ€å­—ç¬¦ä¸²è¡¨ç¤º
func (s DraftState) String() string {
	switch s {
	case DraftStateDrafting:
		return "Drafting"
	case DraftStateSealed:
		return "Sealed"
	case DraftStateCommitted:
		return "Committed"
	default:
		return "Unknown"
	}
}

// ============================================================================
// Draft çŠ¶æ€è½¬æ¢é”™è¯¯å®šä¹‰
// ============================================================================

var (
	// ErrDraftNotFound Draft ä¸å­˜åœ¨
	ErrDraftNotFound = errors.New("draft not found")
	// ErrDraftAlreadySealed Draft å·²å°é—­
	ErrDraftAlreadySealed = errors.New("draft already sealed")
	// ErrDraftAlreadyCommitted Draft å·²æäº¤
	ErrDraftAlreadyCommitted = errors.New("draft already committed")
	// ErrInvalidStateTransition æ— æ•ˆçš„çŠ¶æ€è½¬æ¢
	ErrInvalidStateTransition = errors.New("invalid state transition")
	// ErrDraftNil Draft ä¸º nil
	ErrDraftNil = errors.New("draft is nil")
)

// ============================================================================
// Draft æ¡ç›®æ‰©å±•ï¼ˆåŒ…å«çŠ¶æ€å’Œå›æ»šä¿¡æ¯ï¼‰
// ============================================================================

// draftEntry Draft æ¡ç›®ï¼ˆåŒ…å«å…ƒæ•°æ®å’ŒçŠ¶æ€ï¼‰
type draftEntry struct {
	draft       *types.DraftTx // Draft å®ä¾‹ï¼ˆä» DraftService åˆ›å»ºï¼‰
	state       DraftState     // Draft çŠ¶æ€
	createdAt   time.Time      // åˆ›å»ºæ—¶é—´
	sealedAt    *time.Time     // å°é—­æ—¶é—´ï¼ˆnil è¡¨ç¤ºæœªå°é—­ï¼‰
	committedAt *time.Time     // æäº¤æ—¶é—´ï¼ˆnil è¡¨ç¤ºæœªæäº¤ï¼‰

	// å›æ»šæ”¯æŒï¼šä¿å­˜æ“ä½œå†å²ï¼Œç”¨äºå›æ»š
	operationHistory []draftOperation // æ“ä½œå†å²
	mu               sync.RWMutex     // æ“ä½œå†å²å¹¶å‘ä¿æŠ¤
}

// draftOperation Draft æ“ä½œè®°å½•ï¼ˆç”¨äºå›æ»šï¼‰
type draftOperation struct {
	operationType string      // æ“ä½œç±»å‹ï¼ˆ"AddInput", "AddAssetOutput" ç­‰ï¼‰
	timestamp     time.Time   // æ“ä½œæ—¶é—´
	data          interface{} // æ“ä½œæ•°æ®ï¼ˆç”¨äºå›æ»šï¼‰
}

// ============================================================================
// Service æ‰©å±•ï¼ˆæ·»åŠ çŠ¶æ€æœºæ”¯æŒï¼‰
// ============================================================================

// Service TransactionDraftService å®ç°
//
// ğŸ“‹ **èŒè´£**ï¼š
//   - ç®¡ç†äº¤æ˜“è‰ç¨¿çš„ç”Ÿå‘½å‘¨æœŸï¼ˆåˆ›å»ºã€åŠ è½½ã€ä¿å­˜ã€åˆ é™¤ã€å°é—­ï¼‰
//   - æä¾›åŸè¯­çº§åˆ«çš„è¾“å…¥/è¾“å‡ºæ·»åŠ èƒ½åŠ›
//   - å®ç° Draft çŠ¶æ€æœºï¼ˆDrafting â†’ Sealed â†’ Committedï¼‰
//   - æä¾›çŠ¶æ€è½¬æ¢éªŒè¯å’Œå›æ»šæœºåˆ¶
//   - ä¸åŒ…å«ä¸šåŠ¡è¯­ä¹‰ï¼Œåªæä¾›åº•å±‚æ“ä½œ
//
// ğŸ”’ **å¹¶å‘å®‰å…¨**ï¼š
//   - ä½¿ç”¨ sync.RWMutex ä¿æŠ¤å…±äº«çŠ¶æ€
//   - æ¯ä¸ª Draft æœ‰ç‹¬ç«‹çš„ IDï¼Œé¿å…å†²çª
//   - Draft æ“ä½œå†å²ä½¿ç”¨ç‹¬ç«‹çš„é”ä¿æŠ¤
//
// ğŸ“š **å­˜å‚¨ç­–ç•¥**ï¼š
//   - å†…å­˜å­˜å‚¨ï¼šçŠ¶æ€ç®¡ç†å’Œæ“ä½œå†å²ï¼ˆå¿«é€Ÿè®¿é—®ï¼‰
//   - DraftStore æŒä¹…åŒ–ï¼šè‰ç¨¿æ•°æ®æŒä¹…åŒ–ï¼ˆæ”¯æŒå†…å­˜/Redisç­‰ï¼‰
//   - ä¸¤å±‚å­˜å‚¨ï¼šçŠ¶æ€åœ¨å†…å­˜ï¼Œæ•°æ®åœ¨ DraftStore
type Service struct {
	// è‰ç¨¿çŠ¶æ€ç®¡ç†ï¼ˆå†…å­˜ï¼ŒåŒ…å«çŠ¶æ€æœºå’Œæ“ä½œå†å²ï¼‰
	drafts map[string]*draftEntry
	mu     sync.RWMutex

	// è‰ç¨¿æ•°æ®æŒä¹…åŒ–å­˜å‚¨ï¼ˆé€šè¿‡ DraftStore æ¥å£ï¼‰
	draftStore tx.DraftStore

	// é…ç½®
	maxDrafts int // æœ€å¤§è‰ç¨¿æ•°é‡é™åˆ¶
}

// ç¡®ä¿å®ç°æ¥å£
var _ tx.TransactionDraftService = (*Service)(nil)

// NewService åˆ›å»º TransactionDraftService å®ä¾‹
//
// å‚æ•°:
//   - draftStore: è‰ç¨¿æŒä¹…åŒ–å­˜å‚¨ï¼ˆæ”¯æŒå†…å­˜/Redisç­‰å®ç°ï¼Œå¿…é¡»é nilï¼‰
//   - maxDrafts: æœ€å¤§è‰ç¨¿æ•°é‡é™åˆ¶ï¼ˆ0 è¡¨ç¤ºæ— é™åˆ¶ï¼‰
//
// è¿”å›å€¼:
//   - tx.TransactionDraftService: æœåŠ¡å®ä¾‹
//
// âš ï¸ **çº¦æŸ**ï¼š
//   - draftStore å¿…é¡»é nilï¼Œå¦åˆ™ä¼š panic
func NewService(draftStore tx.DraftStore, maxDrafts int) tx.TransactionDraftService {
	if draftStore == nil {
		panic("draftStore cannot be nil")
	}

	if maxDrafts <= 0 {
		maxDrafts = 1000 // é»˜è®¤é™åˆ¶ 1000 ä¸ªè‰ç¨¿
	}

	return &Service{
		drafts:     make(map[string]*draftEntry),
		draftStore: draftStore,
		maxDrafts:  maxDrafts,
	}
}

// ============================================================================
// Draft ç”Ÿå‘½å‘¨æœŸç®¡ç†ï¼ˆå¢å¼ºç‰ˆï¼šæ·»åŠ çŠ¶æ€æœºï¼‰
// ============================================================================

// CreateDraft åˆ›å»ºæ–°çš„äº¤æ˜“è‰ç¨¿
//
// ğŸ¯ **çŠ¶æ€**ï¼šåˆ›å»ºåçŠ¶æ€ä¸º DraftStateDrafting
func (s *Service) CreateDraft(ctx context.Context) (*types.DraftTx, error) {
	s.mu.Lock()
	defer s.mu.Unlock()

	// æ£€æŸ¥è‰ç¨¿æ•°é‡é™åˆ¶
	if len(s.drafts) >= s.maxDrafts {
		return nil, fmt.Errorf("è‰ç¨¿æ•°é‡å·²è¾¾ä¸Šé™ %d", s.maxDrafts)
	}

	// ç”Ÿæˆå”¯ä¸€ ID
	draftID := uuid.New().String()

	// åˆ›å»ºç©ºçš„äº¤æ˜“å¯¹è±¡
	draft := &types.DraftTx{
		DraftID:   draftID,
		CreatedAt: time.Now(),
		IsSealed:  false, // åˆå§‹çŠ¶æ€ä¸ºæœªå°é—­
		Tx: &pb.Transaction{
			Nonce:             generateNonce(),
			CreationTimestamp: uint64(time.Now().Unix()),
			Inputs:            []*pb.TxInput{},
			Outputs:           []*pb.TxOutput{},
		},
	}

	// åˆ›å»º Draft æ¡ç›®ï¼ˆåŒ…å«çŠ¶æ€ï¼‰
	entry := &draftEntry{
		draft:            draft,
		state:            DraftStateDrafting,
		createdAt:        time.Now(),
		operationHistory: make([]draftOperation, 0),
	}

	// å­˜å‚¨è‰ç¨¿
	s.drafts[draftID] = entry

	// æŒä¹…åŒ–è‰ç¨¿æ•°æ®åˆ° DraftStore
	if _, err := s.draftStore.Save(ctx, draft); err != nil {
		// æŒä¹…åŒ–å¤±è´¥ï¼Œå›æ»šå†…å­˜çŠ¶æ€
		delete(s.drafts, draftID)
		return nil, fmt.Errorf("failed to persist draft: %w", err)
	}

	return draft, nil
}

// LoadDraft åŠ è½½å·²å­˜åœ¨çš„äº¤æ˜“è‰ç¨¿
//
// ğŸ¯ **çŠ¶æ€éªŒè¯**ï¼šåªå…è®¸åŠ è½½ Drafting çŠ¶æ€çš„è‰ç¨¿
// ğŸ“‹ **åŠ è½½ç­–ç•¥**ï¼š
//   - é¦–å…ˆä»å†…å­˜çŠ¶æ€ä¸­æŸ¥æ‰¾
//   - å¦‚æœå†…å­˜ä¸­æ²¡æœ‰ï¼Œä» DraftStore åŠ è½½
//   - åŠ è½½åæ¢å¤å†…å­˜çŠ¶æ€
func (s *Service) LoadDraft(ctx context.Context, draftID string) (*types.DraftTx, error) {
	s.mu.RLock()
	entry, exists := s.drafts[draftID]
	s.mu.RUnlock()

	if exists {
		// å†…å­˜ä¸­å­˜åœ¨ï¼Œç›´æ¥è¿”å›
		// çŠ¶æ€éªŒè¯ï¼šåªå…è®¸åŠ è½½ Drafting çŠ¶æ€çš„è‰ç¨¿
		if entry.state != DraftStateDrafting {
			return nil, fmt.Errorf("è‰ç¨¿çŠ¶æ€ä¸º %sï¼Œæ— æ³•åŠ è½½: %s", entry.state.String(), draftID)
		}
		return entry.draft, nil
	}

	// å†…å­˜ä¸­ä¸å­˜åœ¨ï¼Œä» DraftStore åŠ è½½
	draft, err := s.draftStore.Get(ctx, draftID)
	if err != nil {
		return nil, fmt.Errorf("%w: %s", ErrDraftNotFound, draftID)
	}

	// æ¢å¤å†…å­˜çŠ¶æ€
	s.mu.Lock()
	newEntry := &draftEntry{
		draft:            draft,
		state:            DraftStateDrafting, // ä»å­˜å‚¨åŠ è½½çš„è‰ç¨¿é»˜è®¤ä¸º Drafting çŠ¶æ€
		createdAt:        draft.CreatedAt,
		operationHistory: make([]draftOperation, 0),
	}
	s.drafts[draftID] = newEntry
	s.mu.Unlock()

	return draft, nil
}

// SaveDraft ä¿å­˜äº¤æ˜“è‰ç¨¿
//
// ğŸ¯ **çŠ¶æ€éªŒè¯**ï¼šåªå…è®¸ä¿å­˜ Drafting çŠ¶æ€çš„è‰ç¨¿
func (s *Service) SaveDraft(ctx context.Context, draft *types.DraftTx) error {
	if draft == nil {
		return ErrDraftNil
	}

	s.mu.Lock()
	defer s.mu.Unlock()

	entry, exists := s.drafts[draft.DraftID]
	if !exists {
		return fmt.Errorf("%w: %s", ErrDraftNotFound, draft.DraftID)
	}

	// çŠ¶æ€éªŒè¯ï¼šåªå…è®¸ä¿å­˜ Drafting çŠ¶æ€çš„è‰ç¨¿
	if entry.state != DraftStateDrafting {
		return fmt.Errorf("è‰ç¨¿çŠ¶æ€ä¸º %sï¼Œæ— æ³•ä¿å­˜: %s", entry.state.String(), draft.DraftID)
	}

	// æ›´æ–°è‰ç¨¿
	entry.draft = draft

	// æŒä¹…åŒ–è‰ç¨¿æ•°æ®åˆ° DraftStore
	if _, err := s.draftStore.Save(ctx, draft); err != nil {
		return fmt.Errorf("failed to persist draft: %w", err)
	}

	return nil
}

// DeleteDraft åˆ é™¤äº¤æ˜“è‰ç¨¿
//
// ğŸ¯ **çŠ¶æ€éªŒè¯**ï¼šå…è®¸åˆ é™¤ä»»ä½•çŠ¶æ€çš„è‰ç¨¿ï¼ˆç”¨äºæ¸…ç†ï¼‰
func (s *Service) DeleteDraft(ctx context.Context, draftID string) error {
	s.mu.Lock()
	entry, exists := s.drafts[draftID]
	if !exists {
		s.mu.Unlock()
		return fmt.Errorf("%w: %s", ErrDraftNotFound, draftID)
	}

	// å…ˆåˆ é™¤å†…å­˜çŠ¶æ€
	delete(s.drafts, draftID)
	s.mu.Unlock() // é‡Šæ”¾é”ï¼Œé¿å…åœ¨è°ƒç”¨ DraftStore æ—¶æŒæœ‰é”

	// ä»æŒä¹…åŒ–å­˜å‚¨ä¸­åˆ é™¤
	if err := s.draftStore.Delete(ctx, draftID); err != nil {
		// åˆ é™¤å¤±è´¥ï¼Œæ¢å¤å†…å­˜çŠ¶æ€
		s.mu.Lock()
		s.drafts[draftID] = entry
		s.mu.Unlock()
		return fmt.Errorf("failed to delete draft from store: %w", err)
	}

	return nil
}

// SealDraft å°é—­äº¤æ˜“è‰ç¨¿ï¼ˆè½¬æ¢ä¸º ComposedTxï¼‰
//
// ğŸ¯ **çŠ¶æ€è½¬æ¢**ï¼šDrafting â†’ Sealed
// ğŸ”’ **çŠ¶æ€éªŒè¯**ï¼šåªå…è®¸å°é—­ Drafting çŠ¶æ€çš„è‰ç¨¿
func (s *Service) SealDraft(ctx context.Context, draft *types.DraftTx) (*types.ComposedTx, error) {
	if draft == nil {
		return nil, ErrDraftNil
	}

	s.mu.Lock()
	defer s.mu.Unlock()

	entry, exists := s.drafts[draft.DraftID]
	if !exists {
		return nil, fmt.Errorf("%w: %s", ErrDraftNotFound, draft.DraftID)
	}

	// çŠ¶æ€è½¬æ¢éªŒè¯ï¼šåªå…è®¸ä» Drafting è½¬æ¢åˆ° Sealed
	if err := s.validateStateTransition(entry.state, DraftStateSealed); err != nil {
		return nil, fmt.Errorf("æ— æ³•å°é—­è‰ç¨¿: %w", err)
	}

	// æ‰§è¡ŒçŠ¶æ€è½¬æ¢
	now := time.Now()
	entry.state = DraftStateSealed
	entry.sealedAt = &now
	draft.IsSealed = true

	// æ›´æ–°æŒä¹…åŒ–å­˜å‚¨ä¸­çš„è‰ç¨¿çŠ¶æ€
	if _, err := s.draftStore.Save(ctx, draft); err != nil {
		// æŒä¹…åŒ–å¤±è´¥ï¼Œå›æ»šçŠ¶æ€è½¬æ¢
		entry.state = DraftStateDrafting
		entry.sealedAt = nil
		draft.IsSealed = false
		return nil, fmt.Errorf("failed to persist sealed draft: %w", err)
	}

	// è½¬æ¢ä¸º ComposedTx
	composedTx := &types.ComposedTx{
		Tx:     draft.Tx,
		Sealed: true,
	}

	return composedTx, nil
}

// MarkDraftCommitted æ ‡è®°è‰ç¨¿ä¸ºå·²æäº¤
//
// ğŸ¯ **çŠ¶æ€è½¬æ¢**ï¼šSealed â†’ Committed
// ğŸ”’ **çŠ¶æ€éªŒè¯**ï¼šåªå…è®¸æ ‡è®° Sealed çŠ¶æ€çš„è‰ç¨¿
// ğŸ“‹ **ç”¨é€”**ï¼šåœ¨ Draft è½¬æ¢ä¸ºäº¤æ˜“å¹¶æäº¤åˆ°äº¤æ˜“æ± åè°ƒç”¨
func (s *Service) MarkDraftCommitted(ctx context.Context, draftID string) error {
	s.mu.Lock()
	defer s.mu.Unlock()

	entry, exists := s.drafts[draftID]
	if !exists {
		return fmt.Errorf("%w: %s", ErrDraftNotFound, draftID)
	}

	// çŠ¶æ€è½¬æ¢éªŒè¯ï¼šåªå…è®¸ä» Sealed è½¬æ¢åˆ° Committed
	if err := s.validateStateTransition(entry.state, DraftStateCommitted); err != nil {
		return fmt.Errorf("æ— æ³•æ ‡è®°è‰ç¨¿ä¸ºå·²æäº¤: %w", err)
	}

	// æ‰§è¡ŒçŠ¶æ€è½¬æ¢
	now := time.Now()
	entry.state = DraftStateCommitted
	entry.committedAt = &now

	return nil
}

// ============================================================================
// çŠ¶æ€è½¬æ¢éªŒè¯
// ============================================================================

// validateStateTransition éªŒè¯çŠ¶æ€è½¬æ¢çš„æœ‰æ•ˆæ€§
//
// ğŸ“‹ **å…è®¸çš„è½¬æ¢**ï¼š
//   - Drafting â†’ Sealed
//   - Sealed â†’ Committed
//
// âŒ **ä¸å…è®¸çš„è½¬æ¢**ï¼š
//   - ä»»ä½•çŠ¶æ€ â†’ Draftingï¼ˆä¸å¯é€†ï¼‰
//   - Sealed â†’ Draftingï¼ˆä¸å¯é€†ï¼‰
//   - Committed â†’ ä»»ä½•çŠ¶æ€ï¼ˆç»ˆæ€ï¼‰
func (s *Service) validateStateTransition(currentState, targetState DraftState) error {
	// ç›¸åŒçŠ¶æ€
	if currentState == targetState {
		return fmt.Errorf("%w: å½“å‰çŠ¶æ€å·²ç»æ˜¯ %s", ErrInvalidStateTransition, currentState.String())
	}

	// çŠ¶æ€è½¬æ¢è§„åˆ™
	switch currentState {
	case DraftStateDrafting:
		// Drafting åªèƒ½è½¬æ¢åˆ° Sealed
		if targetState != DraftStateSealed {
			return fmt.Errorf("%w: Drafting åªèƒ½è½¬æ¢åˆ° Sealedï¼Œä¸èƒ½è½¬æ¢åˆ° %s", ErrInvalidStateTransition, targetState.String())
		}
	case DraftStateSealed:
		// Sealed åªèƒ½è½¬æ¢åˆ° Committed
		if targetState != DraftStateCommitted {
			return fmt.Errorf("%w: Sealed åªèƒ½è½¬æ¢åˆ° Committedï¼Œä¸èƒ½è½¬æ¢åˆ° %s", ErrInvalidStateTransition, targetState.String())
		}
	case DraftStateCommitted:
		// Committed æ˜¯ç»ˆæ€ï¼Œä¸èƒ½è½¬æ¢
		return fmt.Errorf("%w: Committed æ˜¯ç»ˆæ€ï¼Œä¸èƒ½è½¬æ¢", ErrInvalidStateTransition)
	default:
		return fmt.Errorf("%w: æœªçŸ¥çŠ¶æ€ %d", ErrInvalidStateTransition, currentState)
	}

	return nil
}

// ============================================================================
// å›æ»šæœºåˆ¶
// ============================================================================

// RollbackDraft å›æ»šè‰ç¨¿åˆ°æŒ‡å®šæ“ä½œä¹‹å‰
//
// ğŸ¯ **ç”¨é€”**ï¼šåœ¨æ‰§è¡Œå¤±è´¥æ—¶å›æ»šè‰ç¨¿çŠ¶æ€
// ğŸ”’ **çŠ¶æ€éªŒè¯**ï¼šåªå…è®¸å›æ»š Drafting çŠ¶æ€çš„è‰ç¨¿
// ğŸ“‹ **å®ç°**ï¼šé€šè¿‡æ“ä½œå†å²å›æ»šåˆ°æŒ‡å®šä½ç½®
func (s *Service) RollbackDraft(ctx context.Context, draftID string, operationIndex int) error {
	s.mu.Lock()
	defer s.mu.Unlock()

	entry, exists := s.drafts[draftID]
	if !exists {
		return fmt.Errorf("%w: %s", ErrDraftNotFound, draftID)
	}

	// çŠ¶æ€éªŒè¯ï¼šåªå…è®¸å›æ»š Drafting çŠ¶æ€çš„è‰ç¨¿
	if entry.state != DraftStateDrafting {
		return fmt.Errorf("è‰ç¨¿çŠ¶æ€ä¸º %sï¼Œæ— æ³•å›æ»š: %s", entry.state.String(), draftID)
	}

	entry.mu.Lock()
	defer entry.mu.Unlock()

	// éªŒè¯æ“ä½œç´¢å¼•
	if operationIndex < 0 || operationIndex >= len(entry.operationHistory) {
		return fmt.Errorf("æ— æ•ˆçš„æ“ä½œç´¢å¼•: %d (å†å²é•¿åº¦: %d)", operationIndex, len(entry.operationHistory))
	}

	// 1) æˆªæ–­å†å²ï¼šä¿ç•™ [0:operationIndex) çš„æ“ä½œ
	entry.operationHistory = entry.operationHistory[:operationIndex]

	// 2) åŸºäºæˆªæ–­åçš„å†å²é‡å»º DraftTxï¼ˆç›®å‰ä»…é‡å»º Inputs/Outputsï¼Œä¿æŒ Nonce/CreationTimestamp ç­‰ä¸å˜ï¼‰
	if entry.draft == nil || entry.draft.Tx == nil {
		return fmt.Errorf("draft æ•°æ®ä¸ºç©ºï¼Œæ— æ³•å›æ»š: %s", draftID)
	}
	entry.draft.Tx.Inputs = []*pb.TxInput{}
	entry.draft.Tx.Outputs = []*pb.TxOutput{}

	for _, op := range entry.operationHistory {
		switch op.operationType {
		case "AddInput":
			m, ok := op.data.(map[string]interface{})
			if !ok {
				return fmt.Errorf("å›æ»šå¤±è´¥ï¼šAddInput æ“ä½œæ•°æ®ç±»å‹å¼‚å¸¸: %T", op.data)
			}
			outpoint, _ := m["outpoint"].(*pb.OutPoint)
			isReferenceOnly, _ := m["isReferenceOnly"].(bool)
			entry.draft.Tx.Inputs = append(entry.draft.Tx.Inputs, &pb.TxInput{
				PreviousOutput:  outpoint,
				IsReferenceOnly: isReferenceOnly,
				Sequence:        0,
			})
		case "AddAssetOutput":
			m, ok := op.data.(map[string]interface{})
			if !ok {
				return fmt.Errorf("å›æ»šå¤±è´¥ï¼šAddAssetOutput æ“ä½œæ•°æ®ç±»å‹å¼‚å¸¸: %T", op.data)
			}
			owner, _ := m["owner"].([]byte)
			amount, _ := m["amount"].(string)
			tokenID, _ := m["tokenID"].([]byte)
			lockingConditions, _ := m["lockingConditions"].([]*pb.LockingCondition)

			var assetOutput *pb.AssetOutput
			if len(tokenID) == 0 {
				assetOutput = &pb.AssetOutput{
					AssetContent: &pb.AssetOutput_NativeCoin{
						NativeCoin: &pb.NativeCoinAsset{Amount: amount},
					},
				}
			} else {
				assetOutput = &pb.AssetOutput{
					AssetContent: &pb.AssetOutput_ContractToken{
						ContractToken: &pb.ContractTokenAsset{
							ContractAddress: []byte{},
							TokenIdentifier: &pb.ContractTokenAsset_FungibleClassId{FungibleClassId: tokenID},
							Amount:          amount,
						},
					},
				}
			}

			entry.draft.Tx.Outputs = append(entry.draft.Tx.Outputs, &pb.TxOutput{
				Owner:             owner,
				LockingConditions: lockingConditions,
				OutputContent:     &pb.TxOutput_Asset{Asset: assetOutput},
			})
		case "AddResourceOutput":
			// å½“å‰å›æ»šå®ç°ä¸æ·±å…¥æ¢å¤ resource çš„å®Œæ•´å‚æ•°ï¼ˆå†å²ä¸­åŒ…å« contentHash/category/owner ç­‰ï¼‰
			// å¯¹äºå•æµ‹è¦†ç›–èŒƒå›´ä¹‹å¤–çš„åœºæ™¯ï¼Œè¿™é‡Œé€‰æ‹©å¿½ç•¥è€Œä¸æ˜¯æŠ¥é”™ï¼Œé¿å…å›æ»šä¸å¯ç”¨ã€‚
			continue
		case "AddStateOutput":
			continue
		default:
			// æœªçŸ¥æ“ä½œç±»å‹ï¼šå¿½ç•¥ï¼ˆå‘å‰å…¼å®¹ï¼‰
			continue
		}
	}

	// 3) æŒä¹…åŒ–å›æ»šåçš„è‰ç¨¿
	if _, err := s.draftStore.Save(ctx, entry.draft); err != nil {
		return fmt.Errorf("å›æ»šåæŒä¹…åŒ–è‰ç¨¿å¤±è´¥: %w", err)
	}

	return nil
}

// GetDraftState è·å–è‰ç¨¿çŠ¶æ€
//
// ğŸ¯ **ç”¨é€”**ï¼šæŸ¥è¯¢è‰ç¨¿å½“å‰çŠ¶æ€
func (s *Service) GetDraftState(ctx context.Context, draftID string) (DraftState, error) {
	s.mu.RLock()
	defer s.mu.RUnlock()

	entry, exists := s.drafts[draftID]
	if !exists {
		return DraftStateDrafting, fmt.Errorf("%w: %s", ErrDraftNotFound, draftID)
	}

	return entry.state, nil
}

// ============================================================================
// è¾“å…¥æ·»åŠ ï¼ˆåŸè¯­ï¼‰- å¢å¼ºç‰ˆï¼šæ·»åŠ çŠ¶æ€éªŒè¯å’Œæ“ä½œå†å²è®°å½•
// ============================================================================

// AddInput æ·»åŠ äº¤æ˜“è¾“å…¥
//
// ğŸ¯ **çŠ¶æ€éªŒè¯**ï¼šåªå…è®¸åœ¨ Drafting çŠ¶æ€æ·»åŠ è¾“å…¥
// ğŸ“‹ **æ“ä½œå†å²**ï¼šè®°å½•æ“ä½œä»¥ä¾¿å›æ»š
func (s *Service) AddInput(
	ctx context.Context,
	draft *types.DraftTx,
	outpoint *pb.OutPoint,
	isReferenceOnly bool,
	unlockingProof *pb.UnlockingProof,
) (uint32, error) {
	if draft == nil {
		return 0, ErrDraftNil
	}

	// P1: è¾“å…¥å‚æ•°éªŒè¯
	validator := NewDraftValidator()
	if err := validator.ValidateOutpoint(outpoint); err != nil {
		return 0, fmt.Errorf("outpointéªŒè¯å¤±è´¥: %w", err)
	}

	s.mu.RLock()
	entry, exists := s.drafts[draft.DraftID]
	if !exists {
		s.mu.RUnlock()
		return 0, fmt.Errorf("%w: %s", ErrDraftNotFound, draft.DraftID)
	}

	// çŠ¶æ€éªŒè¯ï¼šåªå…è®¸åœ¨ Drafting çŠ¶æ€æ·»åŠ è¾“å…¥
	if entry.state != DraftStateDrafting {
		s.mu.RUnlock()
		return 0, fmt.Errorf("è‰ç¨¿çŠ¶æ€ä¸º %sï¼Œæ— æ³•æ·»åŠ è¾“å…¥: %s", entry.state.String(), draft.DraftID)
	}
	s.mu.RUnlock()

	if outpoint == nil {
		return 0, fmt.Errorf("outpoint ä¸èƒ½ä¸º nil")
	}

	// æ„å»º TxInput
	txInput := &pb.TxInput{
		PreviousOutput:  outpoint,
		IsReferenceOnly: isReferenceOnly,
		Sequence:        0, // é»˜è®¤åºåˆ—å·
	}

	// æ·»åŠ åˆ°è‰ç¨¿
	draft.Tx.Inputs = append(draft.Tx.Inputs, txInput)

	// è®°å½•æ“ä½œå†å²ï¼ˆç”¨äºå›æ»šï¼‰
	inputIndex := uint32(len(draft.Tx.Inputs) - 1)
	s.recordOperation(entry, "AddInput", map[string]interface{}{
		"inputIndex":      inputIndex,
		"outpoint":        outpoint,
		"isReferenceOnly": isReferenceOnly,
		"unlockingProof":  unlockingProof,
	})

	return inputIndex, nil
}

// ============================================================================
// è¾“å‡ºæ·»åŠ ï¼ˆåŸè¯­ï¼‰- å¢å¼ºç‰ˆï¼šæ·»åŠ çŠ¶æ€éªŒè¯å’Œæ“ä½œå†å²è®°å½•
// ============================================================================

// AddAssetOutput æ·»åŠ èµ„äº§è¾“å‡º
//
// ğŸ¯ **çŠ¶æ€éªŒè¯**ï¼šåªå…è®¸åœ¨ Drafting çŠ¶æ€æ·»åŠ è¾“å‡º
// ğŸ“‹ **æ“ä½œå†å²**ï¼šè®°å½•æ“ä½œä»¥ä¾¿å›æ»š
func (s *Service) AddAssetOutput(
	ctx context.Context,
	draft *types.DraftTx,
	owner []byte,
	amount string,
	tokenID []byte,
	lockingConditions []*pb.LockingCondition,
) (uint32, error) {
	if draft == nil {
		return 0, ErrDraftNil
	}

	// P1: è¾“å…¥å‚æ•°éªŒè¯
	validator := NewDraftValidator()
	if err := validator.ValidateOwnerAddress(owner); err != nil {
		return 0, fmt.Errorf("owneråœ°å€éªŒè¯å¤±è´¥: %w", err)
	}
	if err := validator.ValidateAmount(amount); err != nil {
		return 0, fmt.Errorf("amountéªŒè¯å¤±è´¥: %w", err)
	}
	if len(tokenID) > 0 && len(tokenID) > 64 {
		return 0, fmt.Errorf("tokenIDé•¿åº¦æœ€å¤š64å­—èŠ‚ï¼Œå®é™…: %då­—èŠ‚", len(tokenID))
	}

	s.mu.RLock()
	entry, exists := s.drafts[draft.DraftID]
	if !exists {
		s.mu.RUnlock()
		return 0, fmt.Errorf("%w: %s", ErrDraftNotFound, draft.DraftID)
	}

	// çŠ¶æ€éªŒè¯ï¼šåªå…è®¸åœ¨ Drafting çŠ¶æ€æ·»åŠ è¾“å‡º
	if entry.state != DraftStateDrafting {
		s.mu.RUnlock()
		return 0, fmt.Errorf("è‰ç¨¿çŠ¶æ€ä¸º %sï¼Œæ— æ³•æ·»åŠ è¾“å‡º: %s", entry.state.String(), draft.DraftID)
	}
	s.mu.RUnlock()

	// éªŒè¯ amount æ ¼å¼ï¼ˆå¿…é¡»æ˜¯æœ‰æ•ˆçš„æ•°å­—å­—ç¬¦ä¸²ï¼‰
	if amount == "" {
		return 0, fmt.Errorf("amount ä¸èƒ½ä¸ºç©º")
	}

	// æ„å»º AssetOutput
	var assetOutput *pb.AssetOutput
	if len(tokenID) == 0 {
		// åŸç”Ÿå¸
		assetOutput = &pb.AssetOutput{
			AssetContent: &pb.AssetOutput_NativeCoin{
				NativeCoin: &pb.NativeCoinAsset{
					Amount: amount,
				},
			},
		}
	} else {
		// åˆçº¦ä»£å¸
		assetOutput = &pb.AssetOutput{
			AssetContent: &pb.AssetOutput_ContractToken{
				ContractToken: &pb.ContractTokenAsset{
					ContractAddress: []byte{}, // éœ€è¦è°ƒç”¨æ–¹æä¾›
					TokenIdentifier: &pb.ContractTokenAsset_FungibleClassId{
						FungibleClassId: tokenID,
					},
					Amount: amount,
				},
			},
		}
	}

	// æ„å»º TxOutput
	txOutput := &pb.TxOutput{
		Owner:             owner,
		LockingConditions: lockingConditions,
		OutputContent: &pb.TxOutput_Asset{
			Asset: assetOutput,
		},
	}

	// æ·»åŠ åˆ°è‰ç¨¿
	draft.Tx.Outputs = append(draft.Tx.Outputs, txOutput)

	// è®°å½•æ“ä½œå†å²ï¼ˆç”¨äºå›æ»šï¼‰
	outputIndex := uint32(len(draft.Tx.Outputs) - 1)
	s.recordOperation(entry, "AddAssetOutput", map[string]interface{}{
		"outputIndex":       outputIndex,
		"owner":             owner,
		"amount":            amount,
		"tokenID":           tokenID,
		"lockingConditions": lockingConditions,
	})

	return outputIndex, nil
}

// AddResourceOutput æ·»åŠ èµ„æºè¾“å‡º
//
// ğŸ¯ **çŠ¶æ€éªŒè¯**ï¼šåªå…è®¸åœ¨ Drafting çŠ¶æ€æ·»åŠ è¾“å‡º
// ğŸ“‹ **æ“ä½œå†å²**ï¼šè®°å½•æ“ä½œä»¥ä¾¿å›æ»š
func (s *Service) AddResourceOutput(
	ctx context.Context,
	draft *types.DraftTx,
	contentHash []byte,
	category string,
	owner []byte,
	lockingConditions []*pb.LockingCondition,
	metadata []byte,
) (uint32, error) {
	if draft == nil {
		return 0, ErrDraftNil
	}

	// P1: è¾“å…¥å‚æ•°éªŒè¯
	validator := NewDraftValidator()
	if err := validator.ValidateContentHash(contentHash); err != nil {
		return 0, fmt.Errorf("contentHashéªŒè¯å¤±è´¥: %w", err)
	}
	if err := validator.ValidateOwnerAddress(owner); err != nil {
		return 0, fmt.Errorf("owneråœ°å€éªŒè¯å¤±è´¥: %w", err)
	}
	if category == "" {
		return 0, fmt.Errorf("category ä¸èƒ½ä¸ºç©º")
	}
	if len(category) > 64 {
		return 0, fmt.Errorf("category é•¿åº¦ä¸èƒ½è¶…è¿‡ 64 å­—èŠ‚ï¼Œå®é™…: %d å­—èŠ‚", len(category))
	}

	s.mu.RLock()
	entry, exists := s.drafts[draft.DraftID]
	if !exists {
		s.mu.RUnlock()
		return 0, fmt.Errorf("%w: %s", ErrDraftNotFound, draft.DraftID)
	}

	// çŠ¶æ€éªŒè¯ï¼šåªå…è®¸åœ¨ Drafting çŠ¶æ€æ·»åŠ è¾“å‡º
	if entry.state != DraftStateDrafting {
		s.mu.RUnlock()
		return 0, fmt.Errorf("è‰ç¨¿çŠ¶æ€ä¸º %sï¼Œæ— æ³•æ·»åŠ è¾“å‡º: %s", entry.state.String(), draft.DraftID)
	}
	s.mu.RUnlock()

	if len(contentHash) != 32 {
		return 0, fmt.Errorf("contentHash å¿…é¡»æ˜¯ 32 å­—èŠ‚")
	}

	if len(owner) != 20 {
		return 0, fmt.Errorf("owner åœ°å€å¿…é¡»æ˜¯ 20 å­—èŠ‚")
	}

	// æ„å»º ResourceOutput
	var resourceCategory pbresource.ResourceCategory
	if category == "wasm" || category == "executable" {
		resourceCategory = pbresource.ResourceCategory_RESOURCE_CATEGORY_EXECUTABLE
	} else {
		resourceCategory = pbresource.ResourceCategory_RESOURCE_CATEGORY_STATIC
	}

	pbresource := &pbresource.Resource{
		ContentHash: contentHash,
		Category:    resourceCategory,
	}

	resourceOutput := &pb.ResourceOutput{
		Resource:          pbresource,
		CreationTimestamp: uint64(time.Now().Unix()),
		IsImmutable:       true, // é»˜è®¤ä¸å¯å˜
	}

	// æ„å»º TxOutput
	txOutput := &pb.TxOutput{
		Owner:             owner,
		LockingConditions: lockingConditions,
		OutputContent: &pb.TxOutput_Resource{
			Resource: resourceOutput,
		},
	}

	// æ·»åŠ åˆ°è‰ç¨¿
	draft.Tx.Outputs = append(draft.Tx.Outputs, txOutput)

	// è®°å½•æ“ä½œå†å²ï¼ˆç”¨äºå›æ»šï¼‰
	outputIndex := uint32(len(draft.Tx.Outputs) - 1)
	s.recordOperation(entry, "AddResourceOutput", map[string]interface{}{
		"outputIndex":       outputIndex,
		"contentHash":       contentHash,
		"category":          category,
		"owner":             owner,
		"lockingConditions": lockingConditions,
		"metadata":          metadata,
	})

	return outputIndex, nil
}

// AddStateOutput æ·»åŠ çŠ¶æ€è¾“å‡º
//
// ğŸ¯ **çŠ¶æ€éªŒè¯**ï¼šåªå…è®¸åœ¨ Drafting çŠ¶æ€æ·»åŠ è¾“å‡º
// ğŸ“‹ **æ“ä½œå†å²**ï¼šè®°å½•æ“ä½œä»¥ä¾¿å›æ»š
func (s *Service) AddStateOutput(
	ctx context.Context,
	draft *types.DraftTx,
	stateID []byte,
	stateVersion uint64,
	executionResultHash []byte,
	publicInputs []byte,
	parentStateHash []byte,
) (uint32, error) {
	if draft == nil {
		return 0, ErrDraftNil
	}

	// P1: è¾“å…¥å‚æ•°éªŒè¯
	validator := NewDraftValidator()
	if err := validator.ValidateStateID(stateID); err != nil {
		return 0, fmt.Errorf("stateIdéªŒè¯å¤±è´¥: %w", err)
	}
	if err := validator.ValidateExecutionResultHash(executionResultHash); err != nil {
		return 0, fmt.Errorf("executionResultHashéªŒè¯å¤±è´¥: %w", err)
	}
	if len(parentStateHash) > 0 && len(parentStateHash) != 32 {
		return 0, fmt.Errorf("parentStateHashå¿…é¡»æ˜¯32å­—èŠ‚ï¼ˆå¦‚æœæä¾›ï¼‰ï¼Œå®é™…: %då­—èŠ‚", len(parentStateHash))
	}

	s.mu.RLock()
	entry, exists := s.drafts[draft.DraftID]
	if !exists {
		s.mu.RUnlock()
		return 0, fmt.Errorf("%w: %s", ErrDraftNotFound, draft.DraftID)
	}

	// çŠ¶æ€éªŒè¯ï¼šåªå…è®¸åœ¨ Drafting çŠ¶æ€æ·»åŠ è¾“å‡º
	if entry.state != DraftStateDrafting {
		s.mu.RUnlock()
		return 0, fmt.Errorf("è‰ç¨¿çŠ¶æ€ä¸º %sï¼Œæ— æ³•æ·»åŠ è¾“å‡º: %s", entry.state.String(), draft.DraftID)
	}
	s.mu.RUnlock()

	if len(executionResultHash) != 32 {
		return 0, fmt.Errorf("executionResultHash å¿…é¡»æ˜¯ 32 å­—èŠ‚")
	}

	// æ„å»º StateOutput
	publicInputsArray := [][]byte{}
	if len(publicInputs) > 0 {
		publicInputsArray = append(publicInputsArray, publicInputs)
	}

	zkProof := &pb.ZKStateProof{
		Proof:         []byte{}, // ç”± ZK è¯æ˜ç”Ÿæˆå™¨å¡«å……
		PublicInputs:  publicInputsArray,
		ProvingScheme: "groth16", // é»˜è®¤ä½¿ç”¨ groth16
	}

	stateOutput := &pb.StateOutput{
		StateId:             stateID,
		StateVersion:        stateVersion,
		ZkProof:             zkProof,
		ExecutionResultHash: executionResultHash,
	}

	// è®¾ç½®çˆ¶çŠ¶æ€å“ˆå¸Œï¼ˆå¯é€‰ï¼‰
	if len(parentStateHash) > 0 {
		stateOutput.ParentStateHash = parentStateHash
	}

	// æ„å»º TxOutput
	txOutput := &pb.TxOutput{
		Owner:             []byte{}, // StateOutput é€šå¸¸ä¸éœ€è¦ owner
		LockingConditions: nil,      // StateOutput é€šå¸¸ä¸éœ€è¦é”å®šæ¡ä»¶
		OutputContent: &pb.TxOutput_State{
			State: stateOutput,
		},
	}

	// æ·»åŠ åˆ°è‰ç¨¿
	draft.Tx.Outputs = append(draft.Tx.Outputs, txOutput)

	// è®°å½•æ“ä½œå†å²ï¼ˆç”¨äºå›æ»šï¼‰
	outputIndex := uint32(len(draft.Tx.Outputs) - 1)
	s.recordOperation(entry, "AddStateOutput", map[string]interface{}{
		"outputIndex":         outputIndex,
		"stateID":             stateID,
		"stateVersion":        stateVersion,
		"executionResultHash": executionResultHash,
		"publicInputs":        publicInputs,
		"parentStateHash":     parentStateHash,
	})

	return outputIndex, nil
}

// ============================================================================
// è¾…åŠ©æ–¹æ³•
// ============================================================================

// GetDraftByID æ ¹æ® ID è·å–è‰ç¨¿ï¼ˆä¾¿æ·æ–¹æ³•ï¼‰
func (s *Service) GetDraftByID(ctx context.Context, draftID string) (*types.DraftTx, error) {
	return s.LoadDraft(ctx, draftID)
}

// ValidateDraft éªŒè¯è‰ç¨¿çš„åŸºæœ¬æœ‰æ•ˆæ€§ï¼ˆå¢å¼ºç‰ˆï¼‰
func (s *Service) ValidateDraft(ctx context.Context, draft *types.DraftTx) error {
	validator := NewDraftValidator()
	result := validator.ValidateDraft(ctx, draft)
	if !result.Valid {
		return fmt.Errorf("è‰ç¨¿éªŒè¯å¤±è´¥: %s", result.Error())
	}
	return nil
}

// ============================================================================
// å†…éƒ¨è¾…åŠ©å‡½æ•°
// ============================================================================

// recordOperation è®°å½•æ“ä½œåˆ°å†å²ï¼ˆç”¨äºå›æ»šï¼‰
func (s *Service) recordOperation(entry *draftEntry, operationType string, data interface{}) {
	entry.mu.Lock()
	defer entry.mu.Unlock()

	entry.operationHistory = append(entry.operationHistory, draftOperation{
		operationType: operationType,
		timestamp:     time.Now(),
		data:          data,
	})
}

// generateNonce ç”Ÿæˆå”¯ä¸€ Nonce
func generateNonce() uint64 {
	return uint64(time.Now().UnixNano())
}

// ============================================================================
// å†…å­˜ç›‘æ§æ¥å£å®ç°ï¼ˆMemoryReporterï¼‰
// ============================================================================

// ModuleName è¿”å›æ¨¡å—åç§°ï¼ˆå®ç° MemoryReporter æ¥å£ï¼‰
func (s *Service) ModuleName() string {
	return "tx"
}

// CollectMemoryStats æ”¶é›† TX æ¨¡å—çš„å†…å­˜ç»Ÿè®¡ä¿¡æ¯ï¼ˆå®ç° MemoryReporter æ¥å£ï¼‰
//
// æ˜ å°„è§„åˆ™ï¼ˆæ ¹æ® memory-standards.mdï¼‰ï¼š
// - Objects: å½“å‰å†…å­˜ä¸­çš„ TX å¯¹è±¡æ•°ï¼ˆæ„å»ºä¸­ + å¾…éªŒè¯ + æ‰§è¡Œä¸Šä¸‹æ–‡ï¼‰
// - ApproxBytes: ä¼°ç®— TX ç»“æ„ä½“é›†åˆå¤§å°ï¼ˆlen(drafts) * avgSizeï¼‰
// - CacheItems: TX çº§åˆ«ç¼“å­˜ï¼ˆå¦‚ç­¾åç¼“å­˜ã€è§£ç  cacheï¼‰æ¡æ•°
// - QueueLength: å†…éƒ¨é˜Ÿåˆ—é•¿åº¦ï¼ˆå¦‚"å¾…æ‰§è¡Œ TX é˜Ÿåˆ—"ï¼‰
func (s *Service) CollectMemoryStats() metricsiface.ModuleMemoryStats {
	s.mu.RLock()
	defer s.mu.RUnlock()

	draftCount := len(s.drafts)
	// ğŸ“Œ æš‚ä¸å¯¹ draft é›†åˆåš bytes çº§åˆ«ä¼°ç®—ï¼Œä»¥é¿å…ä½¿ç”¨å›ºå®šå¸¸æ•°ã€‚
	// å®é™…å†…å­˜å ç”¨è¯·ç»“åˆï¼š
	// - runtime.MemStats
	// - Objectsï¼ˆdraft æ•°é‡ï¼‰

	return metricsiface.ModuleMemoryStats{
		Module:      "tx",
		Layer:       "L4-CoreBusiness",
		Objects:     int64(draftCount),
		ApproxBytes: 0,
		CacheItems:  0, // TX æ¨¡å—æš‚ä¸ç»Ÿè®¡ç¼“å­˜æ¡ç›®
		QueueLength: 0, // DraftService æ— é˜Ÿåˆ—
	}
}
